--- a/data/output/core-projects.json
+++ b/data/output/core-projects.json
@@ -7,7 +7,8 @@
       "1R03OD034502-01"
     ],
     "award_amount": 312973,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030161",
@@ -21,7 +22,8 @@
       "3OT2OD030161-01S4"
     ],
     "award_amount": 2855641,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD034494",
@@ -31,7 +33,8 @@
       "1R03OD034494-01"
     ],
     "award_amount": 366000,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "OT2OD030545",
@@ -46,7 +49,8 @@
       "3OT2OD030545-01S5"
     ],
     "award_amount": 3089131,
-    "publications": 4
+    "publications": 4,
+    "repos": 0
   },
   {
     "id": "R03OD030596",
@@ -56,7 +60,8 @@
       "1R03OD030596-01"
     ],
     "award_amount": 304918,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD032629",
@@ -66,7 +71,8 @@
       "1R03OD032629-01"
     ],
     "award_amount": 377050,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "U54OD036472",
@@ -76,7 +82,8 @@
       "1U54OD036472-01"
     ],
     "award_amount": 1480657,
-    "publications": 1
+    "publications": 1,
+    "repos": 2
   },
   {
     "id": "R03OD036494",
@@ -86,7 +93,8 @@
       "1R03OD036494-01"
     ],
     "award_amount": 318000,
-    "publications": 2
+    "publications": 2,
+    "repos": 0
   },
   {
     "id": "R03OD032625",
@@ -96,7 +104,8 @@
       "1R03OD032625-01"
     ],
     "award_amount": 297031,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD034499",
@@ -106,7 +115,8 @@
       "1R03OD034499-01"
     ],
     "award_amount": 391151,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD034493",
@@ -116,7 +126,8 @@
       "1R03OD034493-01"
     ],
     "award_amount": 302764,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD034495",
@@ -126,7 +137,8 @@
       "1R03OD034495-01"
     ],
     "award_amount": 312000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD036493",
@@ -136,7 +148,8 @@
       "1R03OD036493-01"
     ],
     "award_amount": 296510,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD034497",
@@ -146,7 +159,8 @@
       "1R03OD034497-01"
     ],
     "award_amount": 319166,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "OT2OD036440",
@@ -156,7 +170,8 @@
       "1OT2OD036440-01"
     ],
     "award_amount": 1473390,
-    "publications": 2
+    "publications": 2,
+    "repos": 0
   },
   {
     "id": "R03OD036497",
@@ -166,7 +181,8 @@
       "1R03OD036497-01"
     ],
     "award_amount": 388000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD036489",
@@ -176,7 +192,8 @@
       "1R03OD036489-01"
     ],
     "award_amount": 237411,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD036491",
@@ -186,7 +203,8 @@
       "1R03OD036491-01"
     ],
     "award_amount": 323817,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD036490",
@@ -196,7 +214,8 @@
       "1R03OD036490-01"
     ],
     "award_amount": 300676,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD030601",
@@ -206,7 +225,8 @@
       "1R03OD030601-01"
     ],
     "award_amount": 263120,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030164",
@@ -216,7 +236,8 @@
       "1OT2OD030164-01"
     ],
     "award_amount": 494117,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD030605",
@@ -226,7 +247,8 @@
       "1R03OD030605-01"
     ],
     "award_amount": 312000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030546",
@@ -239,7 +261,8 @@
       "3OT2OD030546-01S3"
     ],
     "award_amount": 2160622,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD030604",
@@ -249,7 +272,8 @@
       "1R03OD030604-01"
     ],
     "award_amount": 297000,
-    "publications": 8
+    "publications": 8,
+    "repos": 0
   },
   {
     "id": "R03OD032666",
@@ -259,7 +283,8 @@
       "1R03OD032666-01"
     ],
     "award_amount": 311000,
-    "publications": 4
+    "publications": 4,
+    "repos": 0
   },
   {
     "id": "R03OD034496",
@@ -269,7 +294,8 @@
       "1R03OD034496-01"
     ],
     "award_amount": 318000,
-    "publications": 5
+    "publications": 5,
+    "repos": 0
   },
   {
     "id": "R03OD036492",
@@ -279,7 +305,8 @@
       "1R03OD036492-01"
     ],
     "award_amount": 298222,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD032628",
@@ -289,7 +316,8 @@
       "1R03OD032628-01"
     ],
     "award_amount": 309427,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD032630",
@@ -299,7 +327,8 @@
       "1R03OD032630-01"
     ],
     "award_amount": 335407,
-    "publications": 8
+    "publications": 8,
+    "repos": 0
   },
   {
     "id": "R03OD030599",
@@ -309,7 +338,8 @@
       "1R03OD030599-01"
     ],
     "award_amount": 265495,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD034500",
@@ -319,7 +349,8 @@
       "1R03OD034500-01"
     ],
     "award_amount": 279992,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030160",
@@ -333,7 +364,8 @@
       "3OT2OD030160-01S4"
     ],
     "award_amount": 3120175,
-    "publications": 13
+    "publications": 13,
+    "repos": 0
   },
   {
     "id": "OT2OD036435",
@@ -343,7 +375,8 @@
       "1OT2OD036435-01"
     ],
     "award_amount": 1500000,
-    "publications": 5
+    "publications": 5,
+    "repos": 0
   },
   {
     "id": "R03OD032627",
@@ -353,7 +386,8 @@
       "1R03OD032627-01"
     ],
     "award_amount": 329875,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD032626",
@@ -363,7 +397,8 @@
       "1R03OD032626-01"
     ],
     "award_amount": 298188,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "OT2OD032619",
@@ -375,7 +410,8 @@
       "3OT2OD032619-01S1"
     ],
     "award_amount": 2577565,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD032092",
@@ -387,7 +423,8 @@
       "3OT2OD032092-01S1"
     ],
     "award_amount": 2401621,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030547",
@@ -400,7 +437,8 @@
       "3OT2OD030547-01S2"
     ],
     "award_amount": 2859207,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD036496",
@@ -410,7 +448,8 @@
       "1R03OD036496-01"
     ],
     "award_amount": 334685,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD030603",
@@ -420,7 +459,8 @@
       "1R03OD030603-01"
     ],
     "award_amount": 302804,
-    "publications": 2
+    "publications": 2,
+    "repos": 0
   },
   {
     "id": "R03OD032622",
@@ -430,7 +470,8 @@
       "1R03OD032622-01"
     ],
     "award_amount": 314833,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD032624",
@@ -440,7 +481,8 @@
       "1R03OD032624-01"
     ],
     "award_amount": 304000,
-    "publications": 11
+    "publications": 11,
+    "repos": 0
   },
   {
     "id": "OT2OD032119",
@@ -452,7 +494,8 @@
       "3OT2OD032119-01S2"
     ],
     "award_amount": 1300851,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "OT2OD030162",
@@ -466,7 +509,8 @@
       "3OT2OD030162-01S4"
     ],
     "award_amount": 10063836,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD036498",
@@ -476,7 +520,8 @@
       "1R03OD036498-01"
     ],
     "award_amount": 356000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD030598",
@@ -486,7 +531,8 @@
       "1R03OD030598-01"
     ],
     "award_amount": 228293,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "OT2OD030544",
@@ -499,7 +545,8 @@
       "3OT2OD030544-01S2"
     ],
     "award_amount": 2930832,
-    "publications": 29
+    "publications": 29,
+    "repos": 0
   },
   {
     "id": "R03OD030600",
@@ -509,7 +556,8 @@
       "1R03OD030600-01"
     ],
     "award_amount": 363306,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD034501",
@@ -519,7 +567,8 @@
       "1R03OD034501-01"
     ],
     "award_amount": 314739,
-    "publications": 4
+    "publications": 4,
+    "repos": 0
   },
   {
     "id": "R03OD030608",
@@ -529,7 +578,8 @@
       "1R03OD030608-01"
     ],
     "award_amount": 335000,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD030597",
@@ -539,7 +589,8 @@
       "1R03OD030597-01"
     ],
     "award_amount": 320000,
-    "publications": 3
+    "publications": 3,
+    "repos": 0
   },
   {
     "id": "R03OD036495",
@@ -549,7 +600,8 @@
       "1R03OD036495-01"
     ],
     "award_amount": 292728,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD032623",
@@ -559,7 +611,8 @@
       "1R03OD032623-01"
     ],
     "award_amount": 335000,
-    "publications": 1
+    "publications": 1,
+    "repos": 0
   },
   {
     "id": "R03OD036499",
@@ -569,7 +622,8 @@
       "1R03OD036499-01"
     ],
     "award_amount": 390000,
-    "publications": 2
+    "publications": 2,
+    "repos": 0
   },
   {
     "id": "R03OD030609",
@@ -579,7 +633,8 @@
       "1R03OD030609-01"
     ],
     "award_amount": 335000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD034498",
@@ -589,7 +644,8 @@
       "1R03OD034498-01"
     ],
     "award_amount": 334926,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   },
   {
     "id": "R03OD030602",
@@ -599,6 +655,7 @@
       "1R03OD030602-01"
     ],
     "award_amount": 308000,
-    "publications": 0
+    "publications": 0,
+    "repos": 0
   }
 ]
