--- a/.github/actions/install-playwright/action.yaml
+++ b/.github/actions/install-playwright/action.yaml
@@ -1,18 +1,36 @@
 name: Install Playwright
+description: Install Playwright and dependencies with cache
+
+# https://github.com/microsoft/playwright/issues/7249
+
+inputs:
+  working-directory:
+    description: Where to install Playwright
+    default: ./
+
+outputs:
+  version:
+    description: Installed version of Playwright
+    value: ${{ steps.version.outputs.version }}
+  cache-hit:
+    description: Whether cache for Playwright was found
+    value: ${{ steps.cache.outputs.cache-hit }}
 
 runs:
   using: composite
   steps:
     - name: Get Playwright version
+      id: version
       shell: bash
-      working-directory: data
+      working-directory: ${{ inputs.working-directory }}
       run: |
-        PLAYWRIGHT_VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
-        echo "Playwright Version: $PLAYWRIGHT_VERSION"
-        echo "PLAYWRIGHT_VERSION=$PLAYWRIGHT_VERSION" >> $GITHUB_ENV
+        VERSION=$(npm ls @playwright/test | grep @playwright | sed 's/.*@//')
+        echo "Version: $VERSION"
+        echo "PLAYWRIGHT_VERSION=$VERSION" >> $GITHUB_ENV
+        echo "version=$VERSION" >> $GITHUB_OUTPUT
 
     - name: Cache Playwright
-      id: cache-playwright
+      id: cache
       uses: actions/cache@v4
       with:
         path: ~/.cache/ms-playwright
@@ -20,12 +38,12 @@ runs:
 
     - name: Install Playwright and its dependencies
       shell: bash
-      if: steps.cache-playwright.outputs.cache-hit != 'true'
-      working-directory: data
+      if: steps.cache.outputs.cache-hit != 'true'
+      working-directory: ${{ inputs.working-directory }}
       run: npx playwright install chromium --with-deps
 
     - name: Install just Playwright's dependencies
       shell: bash
-      if: steps.cache-playwright.outputs.cache-hit == 'true'
-      working-directory: data
+      if: steps.cache.outputs.cache-hit == 'true'
+      working-directory: ${{ inputs.working-directory }}
       run: npx playwright install-deps
